--- a/groups/tile.yaml
+++ b/groups/tile.yaml
@@ -5,3 +5,6 @@
       - device_tracker.tile_kia
       - device_tracker.tile_keys
       - device_tracker.tile_lunziphone
+      - device_tracker.tile_b127f2f96a0645d5
+      - device_tracker.tile_b8721baf9a3a6079
+      - device_tracker.tile_p8dd9f6a4c5078fa2620b42a84b690e80
